--- a/frontend/src/review/marked-text/marked-text.component.scss
+++ b/frontend/src/review/marked-text/marked-text.component.scss
@@ -1,22 +1,26 @@
-div {
+@import '../../assets/main-style.scss';
+
+.marked-text {
   text-align: left;
   font-family: monospace;
-  background-color: rgb(39, 39, 39);
-  min-width: 300px;
-  margin: 10px;
-  padding: 0 5px 0 0;
+  background-color: #343434;
+  min-width: 200px;
+  margin: 0 .5em;
 
-  .number {
+  &__number {
     display: inline-block;
-    border-right: 1px solid rgb(114, 114, 114);
+    text-align: right;
+    border-right: 1px solid #727272;
     padding: 0 .5em;
+    min-width: 35px;
     margin-right: .5em;
-    color: #c4c4c4;
+    color: $main-font-color;
+    user-select: none;
   }
 
-  span {
+  &__item {
     display: block;
     line-height: 1.5rem;
-    color: #c4c4c4;
+    color: $main-font-color;
   }
 }
