--- a/frontend/src/review/review/review.component.html
+++ b/frontend/src/review/review/review.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="review">
   <app-nav-menu 
     [navMenuStyle]="'nav-bar'" 
     (clickedEmitter)="onClickTab($event)"></app-nav-menu>
