--- a/frontend/src/review/tooltip/tooltip.component.html
+++ b/frontend/src/review/tooltip/tooltip.component.html
@@ -1,20 +1,26 @@
 <div [ngStyle]="tooltipPositionStyles" [class]="tooltipStyle">
-  <app-marked-text [markedText]="markedText"></app-marked-text>
+  <app-marked-text 
+  [markedTextStyle]="'marked-text'"
+  [markedText]="markedText"></app-marked-text>
+  
   <form 
-  [class]="''" 
-  [formGroup]="addCommentForm" 
-  [autocomplete]="'off'"
-  (ngSubmit)="send(addCommentForm)" >
+    [class]="'tooltip__form'"
+    [formGroup]="addCommentForm" 
+    [autocomplete]="'off'"
+    (ngSubmit)="send(addCommentForm)">
 
     <app-input 
+      [class]="'tooltip__form__input'"
       [id]="'comment'"
       [controlName]="addCommentForm.controls.content" 
       [placeholder]="'enter your comment'" 
       [type]="'text'" 
-      [formInputStyle]="'chat__input'"></app-input>
+      [formInputStyle]="'tooltip__form__input'"></app-input>
+
+
     <app-submit-btn 
-    
-      [buttonStyle]="'add-comment__submit'"
+      [buttonStyle]="'tooltip__form__submit'"
       [disabled]="addCommentForm.invalid">Add</app-submit-btn>
+
   </form>
 </div>
