--- a/frontend/src/review/tooltip/tooltip.component.scss
+++ b/frontend/src/review/tooltip/tooltip.component.scss
@@ -1,12 +1,15 @@
+@import '../../assets/main-style.scss';
+
 .tooltip {
   position: absolute;
-	min-width: 550px;
-	min-height: 100px;
+  min-height: 100px;
+  min-width: 300px;
 	line-height: 30px;
 	color: #fff;
 	background: #000000;
 	text-align: center;
-	border-radius: 6px;
+  border-radius: 6px;
+  padding: 0.5em;
   
   &:before {
     content: '';
@@ -19,5 +22,9 @@
     border-bottom: 8px solid #000000;
     border-right: 8px solid transparent;
     border-left: 8px solid transparent;
-	}
+  }
+  
+  &__form {
+    padding: .5em .5em  0 .5em;
+  }
 }
