--- a/frontend/src/shared/forms/submit-btn/submit-btn.component.scss
+++ b/frontend/src/shared/forms/submit-btn/submit-btn.component.scss
@@ -80,13 +80,23 @@ button {
     width: 100%;
     user-select: none;
     margin: 0;
+    background: $sec-back-color;
 
     &:hover {
         transform: none;
+        background: rgba(49, 171, 237, 0.7);
     }
 
     &.clicked {
         pointer-events: none;
-        opacity: 0.8;      
+        background: $btn-color;     
     }
+}
+
+// tooltip
+.tooltip__form__submit {
+    float: right;
+    margin: 7px 0 0 0;
+    width: 90px;
+    padding: 1em;
 }
