--- a/frontend/src/shared/forms/submit-btn/submit-btn.component.html
+++ b/frontend/src/shared/forms/submit-btn/submit-btn.component.html
@@ -1,3 +1,8 @@
-<button [class]="buttonStyle" [type]="type" [disabled]="disabled" (click)="onClickEvent($event)">
+<button
+    [class]="buttonStyle"
+    [type]="type"
+    [disabled]="disabled"
+    (click)="onClickEvent($event)"
+>
     <ng-content></ng-content>
 </button>
