--- a/frontend/src/document/container/container.component.html
+++ b/frontend/src/document/container/container.component.html
@@ -7,7 +7,9 @@
     [infiniteScrollDisabled]="prevLoading$ | async"
     (scrolled)="onScrollPrev()"
     [immediateCheck]="true">
-    <app-doc-prev *ngFor="let prev of (prevs$ | async)" [preview]="prev">
+    <app-doc-prev 
+      *ngFor="let prev of (prevs$ | async)" 
+      [preview]="prev">
     </app-doc-prev>
   </div>
 
@@ -19,7 +21,9 @@
     [infiniteScrollDisabled]="likedLoading$ | async"
     (scrolled)="onScrollLiked()"
     [immediateCheck]="true">
-    <app-doc-prev *ngFor="let prev of (liked$ | async)" [preview]="prev">
+    <app-doc-prev 
+      *ngFor="let prev of (liked$ | async)" 
+      [preview]="prev">
     </app-doc-prev>
   </div>
 </section>
