--- a/frontend/src/shared/forms/submit-btn/submit-btn.component.html
+++ b/frontend/src/shared/forms/submit-btn/submit-btn.component.html
@@ -2,7 +2,7 @@
     [class]="buttonStyle"
     [type]="type"
     [disabled]="disabled"
-    (click)="onClickEvent($event)"
->
+    (click)="onClickEvent($event)">
+    
     <ng-content></ng-content>
 </button>
