--- a/frontend/src/chat/chat/chat.component.html
+++ b/frontend/src/chat/chat/chat.component.html
@@ -1,30 +1,33 @@
-<div [class]="chatStyle" *ngIf="loggedUser">
-  <app-chat-bar 
-    #chatBar
-    [chatBarStyle]="'chat-bar'" 
-    (click)="toggleChat()">Chat</app-chat-bar>
-
-  <div [ngClass]="{'hide-chat': chatIsHidden, 'show-chat': !chatIsHidden}">
-    <app-message 
-      #messageComponent 
-      [messageStyle]="'message'" 
-      [messages]="messages" 
-      (click)="hideContextMenu()" 
-      (scrollEventEmitter)="hideContextMenu()" 
-      (scrollToBottomEmitter)="scrollToBottom()" 
-      (showContextMenuEmitter)="showContextMenu($event)"></app-message>
-
-    <app-send-message 
-      [sendMessageStyles]="'send-message'"  
-      [userIsBanned]="loggedUser.isBanned" 
-      (messageEmitter)="onMessage($event)"></app-send-message>
-
-    <app-chat-context-menu 
-      [appChatContextMenuStyles]="'context-menu'"
-      [contexMenuPositionStyles]="contexMenuPositionStyles"
-      [contextMenu]="contextMenu"
-      [clickedMessage]="clickedMessage"
-      (contextMenuItemEmitter)="contextMenuAction($event)"></app-chat-context-menu>
-
-  </div>
+<div 
+  [class]="chatStyle" 
+  *ngIf="loggedUser"> 
+    <app-chat-bar 
+      #chatBar
+      [chatBarStyle]="'chat-bar'" 
+      (click)="toggleChat()">
+        Chat
+    </app-chat-bar>
+    <div [ngClass]="{'hide-chat': chatIsHidden, 'show-chat': !chatIsHidden}">
+      <app-message 
+        #messageComponent 
+        [messageStyle]="'message'" 
+        [messages]="messages" 
+        (click)="hideContextMenu()" 
+        (scrollEventEmitter)="hideContextMenu()" 
+        (scrollToBottomEmitter)="scrollToBottom()" 
+        (showContextMenuEmitter)="showContextMenu($event)">
+      </app-message>
+      <app-send-message 
+        [sendMessageStyles]="'send-message'"  
+        [userIsBanned]="loggedUser.isBanned" 
+        (messageEmitter)="onMessage($event)">
+      </app-send-message>
+      <app-chat-context-menu 
+        [appChatContextMenuStyles]="'context-menu'"
+        [contexMenuPositionStyles]="contexMenuPositionStyles"
+        [contextMenu]="contextMenu"
+        [clickedMessage]="clickedMessage"
+        (contextMenuItemEmitter)="contextMenuAction($event)">
+      </app-chat-context-menu>
+    </div>
 </div>
