--- a/frontend/src/chat/message-content/message-content.component.html
+++ b/frontend/src/chat/message-content/message-content.component.html
@@ -1,1 +1,3 @@
-<div [class]="messageContentStyle"><ng-content></ng-content></div>
+<div [class]="messageContentStyle">
+  <ng-content></ng-content>
+</div>
