deletion of unused code and document module refactor

--- a/frontend/src/document/doc/doc.component.html
+++ b/frontend/src/document/doc/doc.component.html
@@ -6,8 +6,7 @@
     <app-like-btn 
       [buttonStyle]="'doc__desc--like'"
       [isChecked]="document.data.like"
-      (change)="checkIfLiked($event)"
-      >
+      (change)="checkIfLiked($event)">
     </app-like-btn>
   </div>
 
