--- a/frontend/src/review/tooltip/tooltip.component.scss
+++ b/frontend/src/review/tooltip/tooltip.component.scss
@@ -25,6 +25,13 @@
   }
   
   &__form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
     padding: .5em .5em  0 .5em;
+    
+    app-input {
+      width: 100%;
+    }
   }
 }
