--- a/frontend/src/editor/alert/alert.component.html
+++ b/frontend/src/editor/alert/alert.component.html
@@ -1,5 +1,15 @@
 <div class="edit-alert" [ngSwitch]="alert?.type">
-  <app-error [class]="'edit-alert__error'" *ngSwitchCase="'error'">{{alert.message}}</app-error>
-  <app-success [class]="'edit-alert__success'" *ngSwitchCase="'success'">{{alert.message}}</app-success>
+  <app-error 
+    [class]="'edit-alert__error'"
+    *ngSwitchCase="'error'">
+    {{alert.message}}
+  </app-error>
+
+  <app-success 
+    [class]="'edit-alert__success'"
+    *ngSwitchCase="'success'">
+    {{alert.message}}
+  </app-success>
+  
   <p *ngSwitchDefault></p>
 </div>
