refractored core module

--- a/frontend/src/core/login/login.component.html
+++ b/frontend/src/core/login/login.component.html
@@ -1,53 +1,67 @@
-<form class="login-form" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+<form 
+  class="login-form" 
+  [formGroup]="loginForm" 
+  (ngSubmit)="onSubmit()">
   <section class="login-form__part login-form__part--first">
     <div class="input-group">
-        <app-input
-          [formInputStyle]="'login-form__input'"
-          [controlName]="loginForm.controls.email"
-          [placeholder]="'Email'"
-      ></app-input>
+      <app-input
+        [formInputStyle]="'login-form__input'"
+        [controlName]="loginForm.controls.email"
+        [placeholder]="'Email'">
+      </app-input>
       <i class="fa fa-envelope input-icon"></i>
       <app-error
-      *ngIf="error$ | async"
-      [class]="'error-msg'" >
-        {{ (error$ | async)?.error.message }}
-    </app-error>
+        *ngIf="error$ | async"
+        [class]="'error-msg'" >
+          {{ (error$ | async)?.error.message }}
+      </app-error>
     </div>
 
     <div class="input-group">
-        <app-input
-          [formInputStyle]="'login-form__input'"
-          [controlName]="loginForm.controls.password"
-          [placeholder]="'Password'"
-          [type]="'password'"
-      ></app-input>
+      <app-input
+        [formInputStyle]="'login-form__input'"
+        [controlName]="loginForm.controls.password"
+        [placeholder]="'Password'"
+        [type]="'password'">
+      </app-input>
       <i class="fa fa-unlock-alt input-icon"></i>
     </div>
 
-
-    <app-submit-btn [disabled]="loginForm.invalid" [buttonStyle]="'login-form__submit'" [type]="'submit'"
-      >Sign In</app-submit-btn
-    >
+    <app-submit-btn
+      [disabled]="loginForm.invalid"
+      [buttonStyle]="'login-form__submit'"
+      [type]="'submit'">
+        Sign In
+    </app-submit-btn>
 
     <div class="login-form__regRoute">
-      <app-label [labelStyle]="'login-form__subtitle'"
-        >No Account Yet?</app-label
-      >
-      <app-router-btn [class]="'login-form__reg'" [link]="'/register'"
-        >Sign Up</app-router-btn
-      >
+      <app-label [labelStyle]="'login-form__subtitle'">
+        No Account Yet?
+        </app-label>
+      <app-router-btn 
+        [class]="'login-form__reg'" 
+        [link]="'/register'">
+        Sign Up
+      </app-router-btn>
     </div>
   </section>
 
   <section class="login-form__part login-form__part--last">
-    <button class="login-form__FB" (click)="signInWithFB()" type="button">
-      <i class="fa fa-facebook-official"></i>
-      <p class="login-form__FB--text">Log In With Facebook</p>
+    <button 
+      class="login-form__FB" 
+      (click)="signInWithFB()" 
+      type="button">
+        <i class="fa fa-facebook-official"></i>
+        <p class="login-form__FB--text">
+          Log In With Facebook
+        </p>
     </button>
 
-    <button class="login-form__GM" >
+    <button class="login-form__GM">
         <i class="fa fa-google"></i>
-        <p class="login-form__GM--text">Log In With Gmail</p>
+        <p class="login-form__GM--text">
+          Log In With Gmail
+        </p>
       </button>
   </section>
 </form> 
