--- a/frontend/src/core/register/register.component.html
+++ b/frontend/src/core/register/register.component.html
@@ -1,6 +1,9 @@
 <div class="container">
   <div class="register-wrapper">
-    <form class="register-form" [formGroup] = "registerForm" (ngSubmit)="register(registerForm)">
+    <form 
+      class="register-form"
+      [formGroup] = "registerForm"
+      (ngSubmit)="register(registerForm)">
       <div class="input-group">
         <app-input 
           [id]="'email'"
