--- a/frontend/src/editor/text-page/text-page.component.html
+++ b/frontend/src/editor/text-page/text-page.component.html
@@ -6,11 +6,10 @@
     #title id="title" 
     placeholder="New Title" 
     textboxStyle="edit-title"
-    (keydown)="titleExists()"
     value="{{loadedTitle}}">
 </app-textbox>
 
-<div *ngIf="!titleStatus">
+<div *ngIf="!loadedTitle">
     <app-error class="error-msg">Title Required</app-error>
 </div>
 
@@ -24,7 +23,7 @@
     </p>
     <app-button
         [class]=''
-        (clickEvent)="swap()">
+        (clickEvent)="swapPDFData()">
             Yes
 
     </app-button>
