requested changes -refractoring core module

--- a/frontend/src/core/register/register.component.html
+++ b/frontend/src/core/register/register.component.html
@@ -130,6 +130,6 @@
     </form>
   </div>
   <div class="login-wrapper">
-    <p>already have an account? <a (click)="navigate()">log in</a></p>
+    <p>already have an account? <a class="register-form__log-in" (click)="navigate()">log in</a></p>
   </div>
 </div>
