--- a/frontend/src/core/register/register.component.scss
+++ b/frontend/src/core/register/register.component.scss
@@ -57,7 +57,7 @@
     margin-bottom: 1rem;
     font-size: 0.9rem;
     
-        & a{
+        & .register-form__log-in{
             text-decoration: none;
             margin-left: 4px;
             letter-spacing: 1px;
