--- a/frontend/src/chat/chat-context-menu/chat-context-menu.component.html
+++ b/frontend/src/chat/chat-context-menu/chat-context-menu.component.html
@@ -2,9 +2,10 @@
   [class]="appChatContextMenuStyles" 
   [ngStyle]="contexMenuPositionStyles" 
   (contextmenu)="donotShowDefaultContextMenu()">
-  <li 
-    [class]="item.classDisabled" 
-    *ngFor="let item of contextMenu.items" 
-    (click)="onClick(item)">{{ item.value }}
-  </li>    
+    <li 
+      [class]="item.classDisabled" 
+      *ngFor="let item of contextMenu.items" 
+      (click)="onClick(item)">
+        {{ item.value }}
+    </li>    
 </ul>
