requested change - refractoring core module

--- a/frontend/src/core/register/register.component.scss
+++ b/frontend/src/core/register/register.component.scss
@@ -66,7 +66,7 @@
             cursor: pointer;
         }
             
-        & a:hover{
+        & .register-form__log-in:hover{
             color: #e09705 ;
         }
     }
