got rid of empty and unused event

--- a/frontend/src/shared/forms/submit-btn/submit-btn.component.html
+++ b/frontend/src/shared/forms/submit-btn/submit-btn.component.html
@@ -1,7 +1,6 @@
 <button
     [class]="buttonStyle"
     [type]="type"
-    [disabled]="disabled"
-    (click)="onClickEvent($event)"> 
+    [disabled]="disabled"> 
     <ng-content></ng-content>
 </button>
