--- a/frontend/src/core/nav/nav.component.html
+++ b/frontend/src/core/nav/nav.component.html
@@ -25,6 +25,13 @@
         </li>
       </ul>
     </div>
+
+    <div class='flag_wrapper'>
+        <img src="../../assets/img/en_icon.png" class='flag' (click)="changeLang('english')">
+        <img src="../../assets/img/fr_icon.png" class='flag' (click)="changeLang('french')">
+        <img src="../../assets/img/ita_icon.png" class='flag' (click)="changeLang('italian')">
+    </div>
+
     <div class="navbar-user-info">
       <div class="img-wrapper">
         <app-nav-img
