--- a/frontend/src/admin/bookmark-info/bookmark-info.component.html
+++ b/frontend/src/admin/bookmark-info/bookmark-info.component.html
@@ -1,6 +1,6 @@
 <div class="bookmark-info">
     <div class="bookmark-info--title">
-        <p>{{'Title:' | translate}} 
+        <p>{{'title' | translate}} 
             <Strong class="bookmark-info--data">
                 {{ (data.title.length > 12)? (data.title | slice:0:12)+'...' : (data.title) }}
             </Strong>
@@ -16,13 +16,13 @@
     <app-button 
         [class]="'boomark-info__button'" 
         (clickEvent)="toggleForm(data)">
-            {{'Edit' | translate}} 
+            {{'edit' | translate}} 
         <i class="fa fa-pencil" ></i>
     </app-button>
     <app-button 
         [class]="'boomark-info__button--delete'" 
         (clickEvent)="deleteBookmark(data)">
-            {{'Delete' | translate}} 
+            {{'delete' | translate}} 
         <i class="fa fa-trash"></i>
     </app-button>
 </div>
